# camille

./: .coverage  .dockerignore  .env.sample  .envrc.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  build.ts  camille.py  compose.yml  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  manage.py  package.json  prompt.txt  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 799a6d8c917c_create_user_table.py  e5262b392647_create_user_table.py
camille/: __init__.py  __main__.py  admin.py  agent.py  apps.py  couchdb.py  llm.py  llm_tools.py  mattermost.py  models.py  prompts.py  settings.py  settings_utils.py  urls.py  utils.py  views.py  xmpp.py
camille/agent/: base.py  mattermost.py  shell.py  xmpp.py
camille/ai/: agents.py  deps.py  models.py  prompts.py  tools.py
camille/llm/: agent.py  assistant.py  graph.py  llm.py  state.py  tools.py
camille/management/: __init__.py
camille/management/commands/: gemini.py  llm.py  mattermost.py  sandbox.py  xmpp.py
camille/mattermost/: agent.old.py  agent.py  agents.py  api.py  client.py  commands.py  deps.py  models.py  tools.py
camille/migrations/: 0001_initial.py  0002_basecredentials_apikeycredentials_usercredentials_and_more.py  0002_xmppchannel_prompt.py  0003_mattermostserver_alter_awsbedrockcredentials_options_and_more.py  0003_mmchannel_notes_mmuser_notes.py  0003_rename_prompt_xmppchannel__prompt.py  0004_alter_mminteraction_messages_json.py  0004_rename__prompt_xmppchannel_prompt_delete_xmppmessage.py  0005_alter_xmppchannel_prompt.py  0005_remove_mminteraction_tokens_count.py  0006_alter_mmchannel_display_name_alter_mmchannel_header_and_more.py  0006_xmppchannel_llm_model.py  0007_alter_mmchannel_notes_alter_mmuser_notes.py  0007_alter_xmppchannel_llm_model_xmppmessage.py  0008_alter_xmppchannel_llm_model.py  0008_mmuser_model_awsbedrockcredentials_and_more.py  0009_llmconversation_xmppchannel_conversation_squashed_0011_remove_xmppchannel_llm_model_and_more.py  0009_mmuser_prompt.py  0012_llmmessage.py  0013_mmuser_mmchannel_shsession.py  0014_alter_mmchannel_conversation_and_more.py  0015_remove_mmchannel_users_remove_mmchannel_name_and_more.py
camille/newllm/: agent.py  graph.py
camille/static/camille/: style.css
camille/templates/: base.html
camille/templates/camille/: credential_confirm_delete.html  credential_form.html  credentials_list.html  home.html  landing.html  (+3 more)
langchain_django/: admin.py  apps.py  checkpointer.py  models.py
langchain_django/migrations/: 0001_initial.py
laura/: admin.py  agent.py  apps.py  models.py  settings.py  tests.py  views.py  xmpp.py
laura/migrations/: 0001_initial.py
proj/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/: mattermost.py
src/camille/: __init__.py  admin.py  agent.py  agents.py  ai.py  apps.py  asgi.py  db.py  http.py  main.py  manage.py  mattermost.py  models.py  schemas.py  settings.py  tasks.py  urls.py  views.py
src/camille_ai/: apps.py
src/camille_orgs/: admin.py  apps.py  models.py
src/mattermost/: client.py  models.py  testing.py
src/proj/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
tests/: conftest.py  test_ai_deps.py  test_ai_models.py  test_main.py  test_mattermost.py  test_models.py  test_settings.py  test_views.py
tests/mattermost/: test_user.py
(+117 files in other folders)
