[project]
name = "camille"
version = "5.0.0"
description = "An AI assistant for Mattermost"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels[daphne]>=4.3.1",
    "daphne>=4.2.1",
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-fernet-encrypted-fields>=0.4.0",
    "httpx-ws>=0.7.2",
    "httpx[brotli,http2,zstd]>=0.28.1",
    "logfire[django,httpx]>=4.3.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-ai-slim[anthropic,bedrock,duckduckgo,google,mistral,openrouter,web-fetch]>=0.7.0",
    "python-dotenv>=1.1.1",
    "servestatic[brotli]>=4.2.0",
]

[project.scripts]
camille = "camille.manage:main"

[dependency-groups]
dev = ["ipython>=9.4.0"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"
