[project]
name = "camille"
version = "6.0.0"
description = "An AI assistant for Mattermost"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne]",
    "daphne",
    "dj-database-url",
    "django",
    "django-fernet-encrypted-fields",
    "httpx-ws",
    "httpx[brotli,http2,zstd]",
    "logfire[httpx]",
    "psycopg[binary]",
    "pydantic-ai-slim[anthropic,bedrock,duckduckgo,google,mistral,openrouter,retries,web-fetch]",
    "python-dotenv",
    "servestatic[brotli]",
    "tzdata",
]

[project.scripts]
camille = "camille.manage:main"

[dependency-groups]
dev = ["ipython>=9.4.0", "pydantic-ai-slim[cli]>=1.96.0"]
test = [
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "camille.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=camille --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["camille"]
omit = []

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
